--- a/lang/ar.json
+++ b/lang/ar.json
@@ -23,6 +23,7 @@
     "Attach": "إرفاق",
     "Bad Gateway": "بوابة غير صالحة",
     "Bad Request": "طلب غير صالح",
+    "Back": "رجوع",
     "Bandwidth Limit Exceeded": "تم تجاوز حد النطاق الترددي",
     "Browse": "تصفح",
     "Cancel": "إلغاء",
@@ -99,6 +100,7 @@
     "If you did not request a password reset, no further action is required.": "إذا لم تقم بطلب استعادة كلمة المرور، لا تحتاج القيام بأي إجراء.",
     "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "إذا كنت تواجه مشكلة في النقر على الزر \":actionText \"، يمكنك نسخ عنوان URL أدناه\n وألصقه في متصفح الويب:",
     "IM Used": "IM مستخدمة",
+    "IDENTIFICATION": "هوية شخصية",
     "Image": "صورة",
     "Impersonate": "اقتباس الهوية",
     "Impersonation": "الاقتباس",
@@ -129,6 +131,7 @@
     "Moved Permanently": "انتقل بشكل دائم",
     "Multi-Status": "حالات متعددة",
     "Multiple Choices": "خيارات متعددة",
+    "My Profile": "ملفي الشخصي",
     "Name": "الاسم",
     "name": "الاسم",
     "Network Authentication Required": "مصادقة الشبكة المطلوبة",
@@ -159,6 +162,7 @@
     "Page Expired": "الصفحة منتهية الصلاحية",
     "Pagination Navigation": "التنقل بين الصفحات",
     "Partial Content": "محتوى جزئي",
+    "PASSPORT": "جواز سفر",
     "Password": "كلمة المرور",
     "password": "كلمة المرور غير صحيحة.",
     "Payload Too Large": "الحمولة كبيرة جدا",
@@ -235,6 +239,7 @@
     "Too Many Requests": "طلبات كثيرة جدًا",
     "Translate": "ترجمة",
     "Translate It": "ترجمة",
+    "Users": "المستخدمين",
     "Unauthorized": "غير مصرّح",
     "Unavailable For Legal Reasons": "غير متوفر لأسباب قانونية",
     "Unknown Error": "خطأ غير معروف",
