it has profiles create and show, update needs few fixes

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -175,7 +175,7 @@
     "Preview": "معاينة",
     "Price": "السعر",
     "Processing": "جاري المعالجة",
-    "Profile": "الملف الشخصي",
+    "Profile": "ملف شخصي",
     "Profile Information": "معلومات الملف الشخصي",
     "Proxy Authentication Required": "مصادقة الوكيل مطلوبة",
     "Railgun Error": "خطأ Railgun",
@@ -255,7 +255,6 @@
     "Upgrade Required": "الترقية مطلوبة",
     "URI Too Long": "URI طويلة جدا",
     "Use Proxy": "استخدام الوكيل",
-    "User": "مستخدم",
     "Variant Also Negotiates": "البديل يتفاوض أيضا",
     "Verify Email Address": "التحقق من عنوان البريد الإلكتروني",
     "View": "عرض",
@@ -265,5 +264,34 @@
     "Yes": "نعم",
     "You are receiving this email because we received a password reset request for your account.": "لقد استلمت هذا الإيميل لأننا استقبلنا طلباً لاستعادة كلمة مرور حسابك.",
     "You're logged in!": "لقد قمت بتسجيل الدخول!",
-    "Your email address is unverified.": "لم يتم التحقق من عنوان بريدك الإلكتروني."
+    "Your email address is unverified.": "لم يتم التحقق من عنوان بريدك الإلكتروني.",
+    "User": "المستخدم",
+    "First Name": "الاسم الأول",
+    "Middle Name": "اسم الأب",
+    "Last Name": "اسم العائلة",
+    "Date of Birth": "تاريخ الميلاد",
+    "Nationality": "الجنسية",
+    "National No": "الرقم الوطني",
+    "Document Type": "نوع المستند",
+    "Document No": "رقم المستند",
+    "IBAN": "رقم الحساب المصرفي",
+    "Document File": "ملف المستند",
+    "First Name is required": "الاسم الأول مطلوب",
+    "First Name max is 30 characters": "الحد الأقصى للاسم الأول هو 30 حرفًا",
+    "Middle Name is required": "اسم الأب مطلوب",
+    "Middle Name max is 30 characters": "الحد الأقصى لاسم الأب هو 30 حرفًا",
+    "Last Name is required": "اسم العائلة مطلوب",
+    "Last Name max is 30 characters": "الحد الأقصى لاسم العائلة هو 30 حرفًا",
+    "National ID is required": "الرقم الوطني مطلوب",
+    "National ID must be 12 digits starting with 1 or 2": "يجب أن يتكون الرقم الوطني من 12 رقمًا ويبدأ بـ 1 أو 2",
+    "Date of Birth is required": "تاريخ الميلاد مطلوب",
+    "Date of Birth must be before today": "يجب أن يكون تاريخ الميلاد قبل اليوم",
+    "Status": "الحالة",
+    "Document": "الوثيقة",
+    "Pending": "قيد الانتظار",
+    "Active": "فعّال",
+    "Inactive": "غير فعّال",
+    "Rejected": "مرفوض",
+    "the": "ال",
+    "The": "ال"
 }
