admin can create profiles and update them from users interface

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -295,6 +295,7 @@
     "Profile Role Details": "تفاصيل الملف الشخصي",
     "ُEdit Profile Role": "تعديل الملف الشخصي",
     "ُProfileRole": "الملف الشخصي",
+    "Divorce Cases": "القضايا",
     "the": "ال",
     "The": "ال"
 }
