everything is ready for the last task

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -46,11 +46,13 @@
     "Connection Timed Out": "انتهت مهلة الاتصال",
     "Continue": "استمرار",
     "Create": "إنشاء",
+    "create": "إنشاء",
     "Create :name": "إضافة :name",
     "Created": "تم الإنشاء",
     "Current Password": "كلمة المرور الحالية",
     "Dashboard": "لوحة التحكم",
     "Delete": "حذف",
+    "delete": "حذف",
     "Delete :name": "حذف :name",
     "Delete Account": "حذف الحساب",
     "Detach": "إلغاء الإرفاق",
@@ -240,6 +242,8 @@
     "Translate": "ترجمة",
     "Translate It": "ترجمة",
     "Users": "المستخدمين",
+    "users": "المستخدمين",
+    "user": "المستخدم",
     "Unauthorized": "غير مصرّح",
     "Unavailable For Legal Reasons": "غير متوفر لأسباب قانونية",
     "Unknown Error": "خطأ غير معروف",
@@ -249,6 +253,7 @@
     "Unsupported Media Type": "نوع وسائط غير مدعوم",
     "Up": "أعلى",
     "Update": "تحديث",
+    "update": "تحديث",
     "Update :name": "تحديث :name",
     "Update Password": "تحديث كلمة المرور",
     "Update your account's profile information and email address.": "قم بتحديث معلومات ملفك الشخصي وبريدك الإلكتروني.",
@@ -258,6 +263,8 @@
     "Variant Also Negotiates": "البديل يتفاوض أيضا",
     "Verify Email Address": "التحقق من عنوان البريد الإلكتروني",
     "View": "عرض",
+    "view": "عرض",
+    "viewAny": "سرد",
     "View :name": "عرض :name",
     "Web Server is Down": "خادم الويب متوقف",
     "Whoops!": "عذراً!",
@@ -286,16 +293,39 @@
     "National ID must be 12 digits starting with 1 or 2": "يجب أن يتكون الرقم الوطني من 12 رقمًا ويبدأ بـ 1 أو 2",
     "Date of Birth is required": "تاريخ الميلاد مطلوب",
     "Date of Birth must be before today": "يجب أن يكون تاريخ الميلاد قبل اليوم",
+    "changeStatus": "تغير الحالة",
     "Status": "الحالة",
+    "status": "حالة",
     "Document": "الوثيقة",
     "Pending": "قيد الانتظار",
     "Active": "فعّال",
     "Inactive": "غير فعّال",
     "Rejected": "مرفوض",
+    "permissions": "الصلاحيات",
+    "Permissions": "الصلاحيات",
     "Profile Role Details": "تفاصيل الملف الشخصي",
     "ُEdit Profile Role": "تعديل الملف الشخصي",
+    "ُProfileRoles": "الملفات الشخصية",
+    "profileRoles": "الملفات الشخصية",
     "ُProfileRole": "الملف الشخصي",
+    "ُprofileRole": "الملف الشخصي",
     "Divorce Cases": "القضايا",
+    "cases": "القضايا",
+    "Cases": "القضايا",
+    "divorceCases": "القضايا",
+    "DivorceCases": "القضايا",
+    "Creator": "المنشئ",
+    "Permissions updated.": "تم تحديث الصلاحيات بنجاح",
+    "Profile deleted successfully.": "تم حدف الملف الشخصي بنجاح",
+    "Profile updated successfully.": "تم تحديث الملف الشخصي بنجاح",
+    "Profile created successfully.": "تم إنشاء الملف الشخصي بنجاح",
+    "deleted successfully.": "تم الحدف بنجاح",
+    "Status updated.": "تم التحديث بنجاح",
     "the": "ال",
+    "Approve": "قبول",
+    "approve": "قبول",
+    "reject": "رفض",
+    "Reject": "رفض",
+    "Manage Permissions for User": "إدارة صلاحيات",
     "The": "ال"
 }
