it has the divorce cases

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -321,11 +321,22 @@
     "Profile created successfully.": "تم إنشاء الملف الشخصي بنجاح",
     "deleted successfully.": "تم الحدف بنجاح",
     "Status updated.": "تم التحديث بنجاح",
+    "Updated successfully.": "تم التحديث بنجاح",
     "the": "ال",
     "Approve": "قبول",
     "approve": "قبول",
     "reject": "رفض",
     "Reject": "رفض",
+    "father": "الأب",
+    "Father": "الأب",
+    "Mother": "الأم",
+    "mother": "الأم",
+    "Case No": "رقم القضية",
+    "Case Number": "رقم القضية",
+    "Divorce Date": "تاريخ الطلاق",
+    "Court Document": "ملف القضية",
+    "Father Name": "اسم الأب",
+    "Mother Name": "اسم الأم",
     "Manage Permissions for User": "إدارة صلاحيات",
     "The": "ال"
 }
