it has sprint 1 full functionality

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -331,6 +331,12 @@
     "Father": "الأب",
     "Mother": "الأم",
     "mother": "الأم",
+    "Gender": "الجنس",
+    "gender": "الجنس",
+    "Children": "الأطفال",
+    "children": "الأطفال",
+    "Male": "ذكر",
+    "Female": "أنثى",
     "Case No": "رقم القضية",
     "Case Number": "رقم القضية",
     "Divorce Date": "تاريخ الطلاق",
